feat: all transactions swagger
